--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -555,9 +555,18 @@
 	url = {http://dblp.uni-trier.de/db/conf/ifip/ifip83.html#Reynolds83},
 	year = 1983,
 }
-
-
-
-
-
+	
+@article{boisseau-sobocinski-2022,
+	title = {String Diagrammatic Electrical Circuit Theory},
+	volume = {372},
+	ISSN = {2075-2180},
+	url = {http://dx.doi.org/10.4204/EPTCS.372.13},
+	DOI = {10.4204/eptcs.372.13},
+	journal = {Electronic Proceedings in Theoretical Computer Science},
+	publisher = {Open Publishing Association},
+	author = {Boisseau, Guillaume and Sobociński, Paweł},
+	year = {2022},
+	month = nov,
+	pages = {178–191},
+}
 
