--- a/writeup/thesis.tex
+++ b/writeup/thesis.tex
@@ -42,6 +42,7 @@
 
 % \chapter*{Acknowledgements}
 % TODO: acknowledgements
+% angélica, adam, zajj (diagram help) 
 
 % \chapter*{Preface}
 % TODO: preface
