--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -219,3 +219,9 @@
     [line width=7*\thickness,white,text=black]}
   }
 }
+
+\tikzset{
+  functor/.style args={#1}{
+    rounded corners,fill=#1,fill opacity=.2
+  }
+}
